--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,13 @@
         <a href="/">ติดตามสถานะ</a>
     </div>
     <div class="nav-icon">
-        <a href="/"><img class="icon" src="https://cdn-icons-png.flaticon.com/128/3031/3031293.png">Search</a>
-        <a href="/"><img class="icon" src="https://cdn-icons-png.flaticon.com/128/1828/1828859.png">Menu</a>
+        <button onclick="" style="background: none; border: none; cursor: pointer;">
+            <img class="icon" src="https://cdn-icons-png.flaticon.com/128/3031/3031293.png">
+            <span>ค้นหา</span>
+        </button>
+        <button onclick="openNav()" style="background: none; border: none; cursor: pointer;">
+            <img class="icon" src="https://cdn-icons-png.flaticon.com/128/1828/1828859.png"> 
+            <span>เมนู</span>
+        </button>
     </div>
 </div>
