--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/slidebar.css">
     <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header class="header">
         <%- include('partials/header') %>
-         <!-- content -->
-        <div class="content">
+    </header>
+        <%- include('partials/slidebar') %>
+        <!-- content -->
+        <div id="main" class="content">
             <img class="img-content" src="https://www.uarm.edu.pe/wp-content/uploads/2024/05/nota-reciclar.jpg" alt="recycle-img">
             <div class="content-row">
                 <div class="content-text">
@@ -80,7 +84,11 @@
             </div>
         </div>
 
-        <!-- Footer content -->
+    <!-- Footer content -->
+    <footer class="footer">
         <%- include('partials/footer') %>
+    </footer>
+    <%- include('partials/overlay') %>  <!-- ใส่ overlay ที่เป็นส่วนของการเปิดเมนู -->
+        <script src="/js/slidebar.js"></script>
 </body>
 </html>
