--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
     <div class="nav-item">
         <a href="/">หน้าหลัก</a>
         <a href="/">แนะนำการแยกขยะ</a>
-        <a href="/">จองคิวรับซื้อขยะ</a>
+        <a href="/reserve">จองคิวรับซื้อขยะ</a>
         <a href="/">ติดตามสถานะ</a>
     </div>
     <div class="nav-icon">
