--- a/views/reserve.ejs
+++ b/views/reserve.ejs
@@ -67,13 +67,13 @@
                         <label>จำนวนขยะที่ต้องการขาย</label>
                         <input type="text"> กิโลกรัม
                     </div>          
-                    <div class="form-group">
+                    <!-- <div class="form-group">
                         <label>อัปโหลดรูปภาพขยะ</label>
                         <input type="file">
                     </div>
                     <div class="form-group">
                         
-                    </div>
+                    </div> -->
                 </div>
                 <div class="submit-butt">
                     <button type="submit">ยืนยันการจอง</button>
