--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,4 +1,3 @@
-/* login.css */
 *{
     font-family: 'Prompt', sans-serif;
 }
@@ -18,10 +17,11 @@ body {
     align-items: center;
     width: 100%;
     max-width: 900px;
+    /* height: 80%; */
     padding: 20px;
 }
 
-.login-content {
+.register-content {
     display: flex;
     background-color: white;
     border-radius: 20px;
@@ -29,12 +29,12 @@ body {
     overflow: hidden;
 }
 
-.login-form {
+.register-form {
     padding: 40px;
     flex: 1;
 }
 
-.login-title h1 {
+.register-title h1 {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -76,68 +76,20 @@ body {
     background-color: #99fc20;
 }
 
-.social-login {
-    text-align: center;
-    margin-top: 20px;
-}
 
-.social-login p {
-    margin-bottom: 10px;
-    font-size: 14px;
-    color: #666;
-}
-
-.social-btn {
-    width: 100%;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    font-size: 16px;
-    cursor: pointer;
-    margin-bottom: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.social-btn img{
-    width: 20px;
-    height: 20px;
-    margin-right: 10px;
-}
-
-.google-btn {
-    background-color: #f3f3f3;
-    color: black;
-}
-
-.google-btn:hover {
-    background-color: rgb(44, 44, 44);
-    color: white;
-}
-
-.facebook-btn {
-    background-color: #3b5998;
-    color: white;
-}
-
-.facebook-btn:hover {
-    background-color: #334d84;
-}
-
-.login-picture {
-    display: none;
+.register-picture {
+    display: block;
     flex: 1;
     background-color: #f3f3f3;
 }
 
-.login-picture img {
+.register-picture img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.register-link {
+.login-link {
     text-align: center;
     margin-top: 20px;
 }
